feat #11: total mission 조회 쿼리 구현